--- a/EXE1/views/Pages/product.ejs
+++ b/EXE1/views/Pages/product.ejs
@@ -10,88 +10,111 @@
     <title>Document</title>
 </head>
 
-<body>
+<body style="background-color:rgb(40, 40, 43);">
     <%- include("../partials/Meno") -%>
-        <div class="container">
+        <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700' rel='stylesheet' type='text/css'>
+        <div class="container" style="background-color:rgb(40, 40, 43);">
             <div class="row justify-content-around">
-                <div class=" mt-3  col-12 col-md-5 ml-md-4 col-lg-3">
-                    <div id="make-3D-space">
-                        <div id="product-card" class="hoverCard">
+                <%for(var i = 0 ; i<kala.length ; i++){ %>
+                    <div class=" mt-3  col-12 col-md-5 ml-md-4 col-lg-3">
+                        <div class="product">
+                            <div class="info-large">
+                                <h4>
+                                    <%= kala[i].title%>
+                                </h4>
+                                <div class="sku">
+                                    PRODUCT SKU: <strong>89356</strong>
+                                </div>
 
-                            <div id="product-front">
-                                <div class="shadow"></div>
+                                <div class="price-big">
+                                    <span><%=kala[i].price%></span> $39
+                                </div>
 
-                                <img src=<%=kala.img1 %> alt="" />
-                                <div class="image_overlay"></div>
-                                <div id="view_details">View details</div>
-                                <div id="moreInfo"><a href="/product/product<%=kala.id%>">moreInfo</a></div>
-                                <div class="stats">
-                                    <div class="stats-container">
-                                        <span class="product_price">$<%= kala.price %></span>
-                                        <span class="product_name">
-                                            <%=kala.title %>
-                                        </span>
-                                        <p>
-                                            Adidas Originals
+                                <h3>COLORS</h3>
+                                <div class="colors-large">
+                                    <ul>
+                                        <li><a href="" style="background:#222"><span></span></a></li>
+                                        <li><a href="" style="background:#6e8cd5"><span></span></a></li>
+                                        <li><a href="" style="background:#f56060"><span></span></a></li>
+                                        <li><a href="" style="background:#44c28d"><span></span></a></li>
+                                    </ul>
+                                </div>
 
-                                        </p>
+                                <h3>SIZE</h3>
+                                <div class="sizes-large">
+                                    <span>XS</span>
+                                    <span>S</span>
+                                    <span>M</span>
+                                    <span>L</span>
+                                    <span>XL</span>
+                                    <span>XXL</span>
+                                </div>
 
-                                        <div class="product-options">
-                                            <strong>SIZES</strong>
-                                            <span>XS, S, M, L, XL, XXL</span>
-                                            <strong>COLORS</strong>
-                                            <div class="colors">
-                                                <div class="c-blue"><span></span></div>
-                                                <div class="c-red"><span></span></div>
-                                                <div class="c-white"><span></span></div>
-                                                <div class="c-green"><span></span></div>
+                                <button class="add-cart-large">Add To Cart</button>
+
+                            </div>
+                            <div class="make3D">
+                                <div class="product-front">
+                                    <div class="shadow"></div>
+                                    <img src=<%=kala[i].img1%> alt="" />
+                                    <div class="image_overlay"></div>
+                                    <div class="add_to_cart">Add to cart</div>
+                                    <div class="view_gallery">View gallery</div>
+                                    <a href="product/product<%=kala[i].id%>">
+                                        <div class="moreInfo">moreInfo</div>
+                                    </a>
+
+                                    <div class="stats">
+                                        <div class="stats-container">
+                                            <span class="product_price"><%=kala[i].price%></span>
+                                            <span class="product_name"><%=kala[i].title%></span>
+                                            <p>Summer dress</p>
+
+                                            <div class="product-options">
+                                                <strong>SIZES</strong>
+                                                <span>XS, S, M, L, XL, XXL</span>
+                                                <strong>COLORS</strong>
+                                                <div class="colors">
+                                                    <div class="c-blue"><span></span></div>
+                                                    <div class="c-red"><span></span></div>
+                                                    <div class="c-white"><span></span></div>
+                                                    <div class="c-green"><span></span></div>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
-                            </div>
-                            <div id="product-back">
-                                <div class="shadow"></div>
-                                <div id="carousel">
-                                    <ul>
-                                        <li><img src=<%=kala.img2%> alt="" /></li>
-                                        <li><img src=<%=kala.img3%> alt="" /></li>
-                                        <li><img src=<%=kala.img4%> alt="" /></li>
-                                    </ul>
-                                    <div class="arrows-perspective">
-                                        <div class="carouselPrev">
-                                            <div class="y"></div>
-                                            <div class="x"></div>
-                                        </div>
-                                        <div class="carouselNext">
-                                            <div class="y"></div>
-                                            <div class="x"></div>
+
+                                <div class="product-back">
+                                    <div class="shadow"></div>
+                                    <div class="carousel">
+                                        <ul class="carousel-container">
+                                            <li><img src=<%=kala[i].img2 %> alt="" /></li>
+                                            <li><img src=<%=kala[i].img3 %> alt="" /></li>
+                                            <li><img src=<%=kala[i].img4 %> alt="" /></li>
+                                        </ul>
+                                        <div class="arrows-perspective">
+                                            <div class="carouselPrev">
+                                                <div class="y"></div>
+                                                <div class="x"></div>
+                                            </div>
+                                            <div class="carouselNext">
+                                                <div class="y"></div>
+                                                <div class="x"></div>
+                                            </div>
                                         </div>
                                     </div>
+                                    <div class="flip-back">
+                                        <div class="cy"></div>
+                                        <div class="cx"></div>
+                                    </div>
                                 </div>
-                                <div id="flip-back">
-                                    <div id="cy"></div>
-                                    <div id="cx"></div>
-                                </div>
-
                             </div>
-
                         </div>
-
                     </div>
-                </div>
+                    <% } %>
             </div>
         </div>
-
-
-
-
-
-
-
-
-
-
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
         <!-- <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script> -->
 
