--- a/EXE1/views/partials/body.ejs
+++ b/EXE1/views/partials/body.ejs
@@ -11,33 +11,65 @@
     <title>Document</title>
 </head>
 
-<body>
+<body style="background-color: rgb(40, 40, 43);">
 
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700' rel='stylesheet' type='text/css'>
-    <div class="container">
+    <div class="container" style="background-color:rgb(40, 40, 43);">
         <div class="row justify-content-around">
             <%for(var i = 0 ; i<data.length ; i++){ %>
                 <div class=" mt-3  col-12 col-md-5 ml-md-4 col-lg-3">
-                    <div id="make-3D-space">
-                        <div id="product-card">
+                    <div class="product">
+                        <div class="info-large">
+                            <h4>
+                                <%= data[i].title%>
+                            </h4>
+                            <div class="sku">
+                                PRODUCT SKU: <strong>89356</strong>
+                            </div>
 
-                            <div id="product-front">
+                            <div class="price-big">
+                                <span><%=data[i].price%></span> $39
+                            </div>
+
+                            <h3>COLORS</h3>
+                            <div class="colors-large">
+                                <ul>
+                                    <li><a href="" style="background:#222"><span></span></a></li>
+                                    <li><a href="" style="background:#6e8cd5"><span></span></a></li>
+                                    <li><a href="" style="background:#f56060"><span></span></a></li>
+                                    <li><a href="" style="background:#44c28d"><span></span></a></li>
+                                </ul>
+                            </div>
+
+                            <h3>SIZE</h3>
+                            <div class="sizes-large">
+                                <span>XS</span>
+                                <span>S</span>
+                                <span>M</span>
+                                <span>L</span>
+                                <span>XL</span>
+                                <span>XXL</span>
+                            </div>
+
+                            <button class="add-cart-large">Add To Cart</button>
+
+                        </div>
+                        <div class="make3D">
+                            <div class="product-front">
                                 <div class="shadow"></div>
-
-                                <img src=<%=data[i].img1 %> alt="" />
+                                <img src=<%=data[i].img1%> alt="" />
                                 <div class="image_overlay"></div>
-                                <div id="view_details">View details</div>
-                                <div id="moreInfo"><a href="/product/product<%=data[i].id%>">moreInfo</a></div>
+                                <div class="add_to_cart">Add to cart</div>
+                                <div class="view_gallery">View gallery</div>
+                                <a href="product/product<%=data[i].id%>">
+                                    <div class="moreInfo">moreInfo</div>
+                                </a>
+
                                 <div class="stats">
                                     <div class="stats-container">
-                                        <span class="product_price">$<%= data[i].price %></span>
-                                        <span class="product_name">
-                                        <%=data[i].title %>
-                                    </span>
-                                        <p>
-                                            Adidas Originals
-
-                                        </p>
+                                        <span class="product_price"><%=data[i].price%></span>
+                                        <span class="product_name"><%=data[i].title%></span>
+                                        <p>Summer dress</p>
 
                                         <div class="product-options">
                                             <strong>SIZES</strong>
@@ -53,13 +85,14 @@
                                     </div>
                                 </div>
                             </div>
-                            <div id="product-back">
+
+                            <div class="product-back">
                                 <div class="shadow"></div>
-                                <div id="carousel">
-                                    <ul>
-                                        <li><img src=<%=data[i].img2%> alt="" /></li>
-                                        <li><img src=<%=data[i].img3%> alt="" /></li>
-                                        <li><img src=<%=data[i].img4%> alt="" /></li>
+                                <div class="carousel">
+                                    <ul class="carousel-container">
+                                        <li><img src=<%=data[i].img2 %> alt="" /></li>
+                                        <li><img src=<%=data[i].img3 %> alt="" /></li>
+                                        <li><img src=<%=data[i].img4 %> alt="" /></li>
                                     </ul>
                                     <div class="arrows-perspective">
                                         <div class="carouselPrev">
@@ -72,15 +105,12 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div id="flip-back">
-                                    <div id="cy"></div>
-                                    <div id="cx"></div>
+                                <div class="flip-back">
+                                    <div class="cy"></div>
+                                    <div class="cx"></div>
                                 </div>
-
                             </div>
-
                         </div>
-
                     </div>
                 </div>
                 <% } %>
