--- a/EXE2/public/css/login.css
+++ b/EXE2/public/css/login.css
@@ -1,164 +1,331 @@
-/* colors */
-
-html {
-    width: 100%;
-    height: 100%;
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,800');
+* {
+    box-sizing: border-box;
 }
 
 body {
-    background-color: #eff3f4;
-    position: relative;
-    width: 100%;
-    height: 100%;
-    font-size: 16px;
-    font-family: 'Source Sans Pro', sans-serif;
-    font-weight: 400;
-    -webkit-font-smoothing: antialiased;
+    background: #f6f5f7;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    font-family: 'Montserrat', sans-serif;
+    height: 100vh;
+    margin: -20px 0 50px;
+}
+
+h1 {
+    font-weight: bold;
+    margin: 0;
+}
+
+h2 {
+    text-align: center;
+}
+
+p {
+    font-size: 14px;
+    font-weight: 100;
+    line-height: 20px;
+    letter-spacing: 0.5px;
+    margin: 20px 0 30px;
+}
+
+span {
+    font-size: 12px;
+}
+
+a {
+    color: #333;
+    font-size: 14px;
+    text-decoration: none;
+    margin: 15px 0;
+}
+
+button {
+    border-radius: 20px;
+    border: 1px solid #FF4B2B;
+    background-color: #FF4B2B;
+    color: #FFFFFF;
+    font-size: 12px;
+    font-weight: bold;
+    padding: 12px 45px;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    transition: transform 80ms ease-in;
+}
+
+button:active {
+    transform: scale(0.95);
+}
+
+button:focus {
+    outline: none;
+}
+
+button.ghost {
+    background-color: transparent;
+    border-color: #FFFFFF;
 }
 
 form {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    display: block;
-    width: 100%;
-    max-width: 400px;
-    background-color: #fff;
-    margin: 0;
-    padding: 2.25em;
-    box-sizing: border-box;
-    border: solid 1px #ddd;
-    border-radius: 0.5em;
-    font-family: 'Source Sans Pro', sans-serif;
-}
-
-form .svgContainer {
-    position: relative;
-    width: 200px;
-    height: 200px;
-    margin: 0 auto 1em;
-    border-radius: 50%;
-    background: none;
-    border: solid 2.5px #3a5e77;
-    overflow: hidden;
-    pointer-events: none;
-}
-
-form .svgContainer div {
-    position: relative;
-    width: 100%;
-    height: 0;
-    overflow: hidden;
-    padding-bottom: 100%;
-}
-
-form .svgContainer .mySVG {
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
+    background-color: #FFFFFF;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 0 50px;
     height: 100%;
-    pointer-events: none;
+    text-align: center;
 }
 
-form .inputGroup {
-    margin: 0 0 2em;
-    padding: 0;
-    position: relative;
-}
-
-form .inputGroup:last-of-type {
-    margin-bottom: 0;
-}
-
-form label {
-    margin: 0 0 12px;
-    display: block;
-    font-size: 1.25em;
-    color: #217093;
-    font-weight: 700;
-    font-family: inherit;
-}
-
-form input[type='email'],
-form input[type="text"],
-form input[type='password'] {
-    display: block;
-    margin: 0;
-    padding: 0 1em 0;
-    background-color: #f3fafd;
-    border: solid 2px #217093;
-    border-radius: 4px;
-    -webkit-appearance: none;
-    box-sizing: border-box;
-    width: 100%;
-    height: 65px;
-    font-size: 1.55em;
-    color: #353538;
-    font-weight: 600;
-    font-family: inherit;
-    transition: box-shadow 0.2s linear, border-color 0.25s ease-out;
-}
-
-form input[type='email']:focus,
-form input[type="text"]:focus,
-form input[type='password']:focus {
-    outline: none;
-    box-shadow: 0px 2px 10px rgba(0, 0, 0, .1);
-    border: solid 2px #4eb8dd;
-}
-
-form input[type='email'],
-form input[type="text"] {
-    padding: 14px 1em 0px;
-}
-
-form button {
-    display: block;
-    margin: 0;
-    padding: 0.65em 1em 1em;
-    background-color: #4eb8dd;
+input {
+    background-color: #eee;
     border: none;
-    border-radius: 4px;
-    box-sizing: border-box;
-    box-shadow: none;
+    padding: 12px 15px;
+    margin: 8px 0;
     width: 100%;
-    height: 65px;
-    font-size: 1.55em;
-    color: #fff;
-    font-weight: 600;
-    font-family: inherit;
-    transition: background-color 0.2s ease-out;
 }
 
-form button:hover,
-form button:active {
-    background-color: #217093;
+.container {
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+    position: relative;
+    overflow: hidden;
+    width: 768px;
+    max-width: 100%;
+    min-height: 480px;
 }
 
-form .inputGroup1 .helper {
+.form-container {
     position: absolute;
-    z-index: 1;
-    font-family: inherit;
-}
-
-form .inputGroup1 .helper1 {
     top: 0;
-    left: 0;
-    transform: translate(1.4em, 2.6em) scale(1);
-    transform-origin: 0 0;
-    color: #217093;
-    font-size: 1.25em;
-    font-weight: 400;
-    opacity: 0.65;
-    pointer-events: none;
-    transition: transform 0.2s ease-out, opacity 0.2s linear;
+    height: 100%;
+    transition: all 0.6s ease-in-out;
 }
 
-form .inputGroup1.focusWithText .helper {
-    /*input[type='email']:focus + .helper {
-       */
-    transform: translate(1.4em, 2em) scale(0.65);
-    opacity: 1;
+.sign-in-container {
+    left: 0;
+    width: 50%;
+    z-index: 2;
 }
+
+.container.right-panel-active .sign-in-container {
+    transform: translateX(100%);
+}
+
+.sign-up-container {
+    left: 0;
+    width: 50%;
+    opacity: 0;
+    z-index: 1;
+}
+
+.container.right-panel-active .sign-up-container {
+    transform: translateX(100%);
+    opacity: 1;
+    z-index: 5;
+    animation: show 0.6s;
+}
+
+@keyframes show {
+    0%,
+    49.99% {
+        opacity: 0;
+        z-index: 1;
+    }
+    50%,
+    100% {
+        opacity: 1;
+        z-index: 5;
+    }
+}
+
+.overlay-container {
+    position: absolute;
+    top: 0;
+    left: 50%;
+    width: 50%;
+    height: 100%;
+    overflow: hidden;
+    transition: transform 0.6s ease-in-out;
+    z-index: 100;
+}
+
+.container.right-panel-active .overlay-container {
+    transform: translateX(-100%);
+}
+
+.overlay {
+    background: #FF416C;
+    background: -webkit-linear-gradient(to right, #FF4B2B, #FF416C);
+    background: linear-gradient(to right, #FF4B2B, #FF416C);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: 0 0;
+    color: #FFFFFF;
+    position: relative;
+    left: -100%;
+    height: 100%;
+    width: 200%;
+    transform: translateX(0);
+    transition: transform 0.6s ease-in-out;
+}
+
+.container.right-panel-active .overlay {
+    transform: translateX(50%);
+}
+
+.overlay-panel {
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 0 40px;
+    text-align: center;
+    top: 0;
+    height: 100%;
+    width: 50%;
+    transform: translateX(0);
+    transition: transform 0.6s ease-in-out;
+}
+
+.overlay-left {
+    transform: translateX(-20%);
+}
+
+.container.right-panel-active .overlay-left {
+    transform: translateX(0);
+}
+
+.overlay-right {
+    right: 0;
+    transform: translateX(0);
+}
+
+.container.right-panel-active .overlay-right {
+    transform: translateX(20%);
+}
+
+.social-container {
+    margin: 20px 0;
+}
+
+.social-container a {
+    border: 1px solid #DDDDDD;
+    border-radius: 50%;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 5px;
+    height: 40px;
+    width: 40px;
+}
+
+footer {
+    background-color: #222;
+    color: #fff;
+    font-size: 14px;
+    bottom: 0;
+    position: fixed;
+    left: 0;
+    right: 0;
+    text-align: center;
+    z-index: 999;
+}
+
+footer p {
+    margin: 10px 0;
+}
+
+footer i {
+    color: red;
+}
+
+footer a {
+    color: #3c97bf;
+    text-decoration: none;
+}
+
+
+/* ---------------------------------------------------------- */
+
+.styled-checkbox {
+    position: absolute;
+    opacity: 0;
+}
+
+.styled-checkbox+label {
+    position: relative;
+    cursor: pointer;
+    padding: 0;
+}
+
+.styled-checkbox+label:before {
+    content: '';
+    margin-right: 10px;
+    display: inline-block;
+    vertical-align: text-top;
+    width: 20px;
+    height: 20px;
+    background: white;
+}
+
+.styled-checkbox:hover+label:before {
+    background: #f35429;
+}
+
+.styled-checkbox:focus+label:before {
+    box-shadow: 0 0 0 3px rgba(0, 0, 0, 0.12);
+}
+
+.styled-checkbox:checked+label:before {
+    background: #f35429;
+}
+
+.styled-checkbox:disabled+label {
+    color: #b8b8b8;
+    cursor: auto;
+}
+
+.styled-checkbox:disabled+label:before {
+    box-shadow: none;
+    background: #ddd;
+}
+
+.styled-checkbox:checked+label:after {
+    content: '';
+    position: absolute;
+    left: 5px;
+    top: 9px;
+    background: white;
+    width: 2px;
+    height: 2px;
+    box-shadow: 2px 0 0 white, 4px 0 0 white, 4px -2px 0 white, 4px -4px 0 white, 4px -6px 0 white, 4px -8px 0 white;
+    transform: rotate(45deg);
+}
+
+.unstyled {
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+}
+
+li {
+    margin: 20px 0;
+}
+
+.centered {
+    width: 300px;
+    margin: auto;
+}
+
+.title {
+    text-align: center;
+    color: #4571ec;
+}
+
+
+/* -------------------------------------------- */
