--- a/EXE2/views/pages/login.ejs
+++ b/EXE2/views/pages/login.ejs
@@ -44,10 +44,10 @@
                     <a href="#" class="social"><i class="fab fa-linkedin-in"></i></a>
                 </div>
                 <span>or use your account</span>
-                <input type="email" placeholder="Email" />
-                <input type="password" placeholder="Password" />
+                <input id="UserNameSingIn" type="text" placeholder="UserName" />
+                <input id="passwordSingin" type="password" placeholder="Password" />
                 <a href="#">Forgot your password?</a>
-                <button>Sign In</button>
+                <button id="btnSingin" onclick="btnSingIn()">Sing In</button>
             </form>
         </div>
         <div class="overlay-container">
