--- a/EXE2/views/pages/profile.ejs
+++ b/EXE2/views/pages/profile.ejs
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/public/css/profile.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+
 
     <title>Document</title>
 </head>
@@ -22,8 +23,11 @@
                             <div class="col-sm-4 bg-c-lite-green user-profile">
                                 <div class="card-block text-center text-white">
                                     <div class="m-b-25"> <img src="https://img.icons8.com/bubbles/100/000000/user.png" class="img-radius" alt="User-Profile-Image"> </div>
-                                    <h6 class="f-w-600">Hembo Tingor</h6>
+                                    <h6 class="f-w-600">
+                                        <%= UserInfo[0].username %>
+                                    </h6>
                                     <p>Web Designer</p> <i class=" mdi mdi-square-edit-outline feather icon-edit m-t-10 f-16"></i>
+                                    <button id="myBtn">Edit Informations</button>
                                 </div>
                             </div>
                             <div class="col-sm-8">
@@ -32,11 +36,15 @@
                                     <div class="row">
                                         <div class="col-sm-6">
                                             <p class="m-b-10 f-w-600">Email</p>
-                                            <h6 class="text-muted f-w-400">rntng@gmail.com</h6>
+                                            <h6 class="text-muted f-w-400">
+                                                <%= UserInfo[0].email %>
+                                            </h6>
                                         </div>
                                         <div class="col-sm-6">
-                                            <p class="m-b-10 f-w-600">Phone</p>
-                                            <h6 class="text-muted f-w-400">98979989898</h6>
+                                            <p class="m-b-10 f-w-600">gender</p>
+                                            <h6 class="text-muted f-w-400">
+                                                <%= UserInfo[0].gender %>
+                                            </h6>
                                         </div>
                                     </div>
                                     <h6 class="m-b-20 m-t-40 p-b-5 b-b-default f-w-600">Projects</h6>
@@ -56,6 +64,41 @@
                                         <li><a href="#!" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="instagram" data-abc="true"><i class="mdi mdi-instagram feather icon-instagram instagram" aria-hidden="true"></i></a></li>
                                     </ul>
                                 </div>
+                                <button>logout</button>
+
+                                <h2>Modal Example</h2>
+
+                                <!-- Trigger/Open The Modal -->
+                                <!-- <button id="myBtn">Open Modal</button> -->
+
+                                <!-- The Modal -->
+                                <div id="myModal" class="modal">
+
+                                    <!-- Modal content -->
+                                    <div class="modal-content">
+                                        <span class="close">&times;</span>
+                                        <label for="username">User Name</label>
+                                        <input style="margin-bottom: 15px;" id="username" type="text" value="<%=UserInfo[0].username%>">
+                                        <label for="email">Email</label>
+                                        <input style="margin-bottom: 15px;" id="email" type="email" value=<%=UserInfo[0].email%> >
+                                        <label for="password">Password</label>
+                                        <input style="margin-bottom: 15px;" id="password" type="password" value=<%=UserInfo[0].password%> >
+                                        <p style="margin-top:-5px;margin-bottom: 10px;">recent gender:
+                                            <%= UserInfo[0].gender %>
+                                        </p>
+                                        <p style="margin-top:-5px;margin-bottom: 10px;">Please select your gender:</p>
+                                        <div style="text-align:center" class="group">
+                                            <label for="rb1">male</label>
+                                            <input type="radio" name="rb" id="rb1" />
+                                            <label for="rb2">female</label>
+                                            <input type="radio" name="rb" id="rb2" />
+
+                                        </div>
+                                        <button>submit</button>
+                                    </div>
+
+                                </div>
+
                             </div>
                         </div>
                     </div>
