--- a/EXE2/public/css/profile.css
+++ b/EXE2/public/css/profile.css
@@ -145,9 +145,9 @@ h6 {
     /* Stay in place */
     z-index: 1;
     /* Sit on top */
-    padding-top: 100px;
-    padding-left: 20px;
-    padding-right: 900px;
+    padding-top: 50px;
+    padding-left: 1100px;
+    padding-right: 20px;
     /* Location of the box */
     left: 0;
     top: 0;
@@ -167,7 +167,9 @@ h6 {
 /* Modal Content */
 
 .modal-content {
-    background-color: #fefefe;
+    /* background-color: #fefefe; */
+    background: -webkit-gradient(linear, left top, right top, from(#f29263), to(#ee5a6f));
+    background: linear-gradient(to right, #ee5a6f, #f29263);
     margin: auto;
     padding: 20px;
     border: 1px solid #888;
@@ -193,7 +195,8 @@ h6 {
 
 input {
     background-color: #eee;
-    border: 3px solid black;
+    border-radius: 10px;
+    /* border: 3px solid black; */
     /* padding: 12px 15px; */
     width: 100%;
 }
