--- a/EXE2/views/pages/profile.ejs
+++ b/EXE2/views/pages/profile.ejs
@@ -64,10 +64,7 @@
                                         <li><a href="#!" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="instagram" data-abc="true"><i class="mdi mdi-instagram feather icon-instagram instagram" aria-hidden="true"></i></a></li>
                                     </ul>
                                 </div>
-                                <button>logout</button>
-
-                                <h2>Modal Example</h2>
-
+                                <button><a href="/logout/<%=UserInfo[0].username%>">logout</a></button>
                                 <!-- Trigger/Open The Modal -->
                                 <!-- <button id="myBtn">Open Modal</button> -->
 
@@ -77,13 +74,16 @@
                                     <!-- Modal content -->
                                     <div class="modal-content">
                                         <span class="close">&times;</span>
-                                        <label for="username">User Name</label>
+                                        <p style="text-align: center;font-size:25px;font-weight:bold;" id="firstUserName">
+                                            <%= UserInfo[0].username %>
+                                        </p>
+                                        <label for="username">User Name:</label>
                                         <input style="margin-bottom: 15px;" id="username" type="text" value="<%=UserInfo[0].username%>">
-                                        <label for="email">Email</label>
+                                        <label id="lableEmail" for="email">Email:</label>
                                         <input style="margin-bottom: 15px;" id="email" type="email" value=<%=UserInfo[0].email%> >
-                                        <label for="password">Password</label>
-                                        <input style="margin-bottom: 15px;" id="password" type="password" value=<%=UserInfo[0].password%> >
-                                        <p style="margin-top:-5px;margin-bottom: 10px;">recent gender:
+                                        <label for="password">Password:</label>
+                                        <input style="margin-bottom: 15px;" id="password" type="text" value=<%=UserInfo[0].password%> >
+                                        <p style="margin-top:-5px;margin-bottom: 10px;" id="selectgender">recent gender:
                                             <%= UserInfo[0].gender %>
                                         </p>
                                         <p style="margin-top:-5px;margin-bottom: 10px;">Please select your gender:</p>
@@ -94,7 +94,7 @@
                                             <input type="radio" name="rb" id="rb2" />
 
                                         </div>
-                                        <button>submit</button>
+                                        <button id="Submitbtn" onclick="SubmitEdit()">submit</button>
                                     </div>
 
                                 </div>
@@ -106,6 +106,7 @@
             </div>
         </div>
     </div>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@10"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
     <script src="/public/js/profile.js"></script>
 </body>
