--- a/EXE2/views/pages/profile.ejs
+++ b/EXE2/views/pages/profile.ejs
@@ -26,7 +26,9 @@
                                     <h6 class="f-w-600">
                                         <%= UserInfo[0].username %>
                                     </h6>
-                                    <p>Web Designer</p> <i class=" mdi mdi-square-edit-outline feather icon-edit m-t-10 f-16"></i>
+                                    <p>
+                                        <%= UserInfo[0].isLoggedIn %>
+                                    </p> <i class=" mdi mdi-square-edit-outline feather icon-edit m-t-10 f-16"></i>
                                     <button style="border-radius: 50px;" id="myBtn">Edit Informations</button>
                                 </div>
                             </div>
