--- a/EXE2/views/pages/login.ejs
+++ b/EXE2/views/pages/login.ejs
@@ -16,15 +16,16 @@
         <div class="form-container sign-up-container">
             <form action="#">
                 <h1>Create Account</h1>
-                <div class="social-container">
+                <!-- <div class="social-container">
                     <a href="#" class="social"><i class="fab fa-facebook-f"></i></a>
                     <a href="#" class="social"><i class="fab fa-google-plus-g"></i></a>
                     <a href="#" class="social"><i class="fab fa-linkedin-in"></i></a>
-                </div>
+                </div> -->
                 <span>or use your email for registration</span>
                 <input id="username" type="text" placeholder="Name" />
                 <input id="email" type="email" placeholder="Email" />
                 <input id="password" type="password" placeholder="Password" />
+                <input id="verifypassword" type="password" placeholder="verify password" />
                 <p style="margin-top:-5px;">Please select your gender:</p>
                 <div class="group" style="margin-top:-25px;">
                     <input type="radio" name="rb" id="rb1" />
@@ -38,11 +39,6 @@
         <div class="form-container sign-in-container">
             <form action="#">
                 <h1>Sign in</h1>
-                <div class="social-container">
-                    <a href="#" class="social"><i class="fab fa-facebook-f"></i></a>
-                    <a href="#" class="social"><i class="fab fa-google-plus-g"></i></a>
-                    <a href="#" class="social"><i class="fab fa-linkedin-in"></i></a>
-                </div>
                 <span>or use your account</span>
                 <input id="UserNameSingIn" type="text" placeholder="UserName" />
                 <input id="passwordSingin" type="password" placeholder="Password" />
@@ -54,6 +50,11 @@
             <div class="overlay">
                 <div class="overlay-panel overlay-left">
                     <h1>Welcome Back!</h1>
+                    <div class="social-container">
+                        <a style="background-color:aliceblue ;" href="#" class="social"><i class="fab fa-facebook-f"></i></a>
+                        <a style="background-color:aliceblue;" href="#" class="social"><i class="fab fa-google-plus-g"></i></a>
+                        <a style="background-color:aliceblue;" href="#" class="social"><i class="fab fa-linkedin-in"></i></a>
+                    </div>
                     <p>To keep connected with us please login with your personal info</p>
                     <button class="ghost" id="signIn">Sign In</button>
                 </div>
